2009-12 Erwin Waterlander <waterlan@xs4all.nl>
	* man page: Replace hyphens with minus signs (look like dashes) where needed.
	* man page: Update ISO mode information.

2009-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.0
	* Added internationalisation using gettext.
	* Added Dutch translation.
	* Ported to Win32 using Mingw32 <http://www.mingw.org/>
	* Ported to DOS using DJGPP <http://www.delorie.com/djgpp/>
	* Fixed problem in DOS/Windows stdio mode.
	* New option -L/--license that prints software license.
	* Code cleanup
	* Update manual

2009-12-04 Erwin Waterlander <waterlan@xs4all.nl>
	* version 2.3
	* version.mk: New file.
	* README: New file.
	* INSTALL: New file.
	* Makefile: Makefile according GNU standards.
	* ChangeLog : New file.
	* Applied all patches from RedHat:
	  - use mkstemp i.s.o. mktemp: Nov 17 2000 Tim Powers <timp@redhat.com> 
	  - segfault: Jan 17 2002 Bernhard Rosenkraenzer <bero@redhat.com>
	  - manpage-update: Oct  6 2004 Mike A. Harris <mharris@redhat.com>
	  - preserve-file-modes: Oct 11 2004 Tim Waugh <twaugh@redhat.com>
	  - tmppath: Apr 13 2005 Tim Waugh <twaugh@redhat.com>
	  - Remove trailing white space. 

1995-03-30 Benjamin Lin <blin@socs.uts.edu.au>
	* version 2.2
	* Conversion from SunOS charset implemented.

1995-03-19 Benjamin Lin <blin@socs.uts.edu.au>
	* version 2.0
	* Rewritten from scratch

1995-03-16 Benjamin Lin <blin@socs.uts.edu.au>
	* version 1.3
	* Modified to more conform to UNIX style.

1995-03-09 Benjamin Lin <blin@socs.uts.edu.au>
	* version 1.2
	* Fixed minor typo error

1994-12-20 Benjamin Lin <blin@socs.uts.edu.au>
	* version 1.1
	* Cleaned up for Borland C/C++ 4.02

1989-10-04 John Birchfield <jb@koko.csustan.edu>
	* version 1.0
